# Checkers

./: CMakeLists.txt  main.cpp
